CAF:QRD_QI:QRDTOOLS:None:none:move project
	Component Name: QRDTOOLS
	Feature Name: None
	Fixed CRs: none
	Targets: msm7627A_sku1
	Required VUs:
	Dependency Notes:
	Limitations:
	Suggested Testing:
	Peer Review:
	Reference Build or VU:
	Comments:sunmeng

Change-Id: I63c660b557604053093149b1a9c0c8f740130c51

--- a/tests/RenderScriptTests/tests/AndroidManifest.xml
+++ b/tests/RenderScriptTests/tests/AndroidManifest.xml
@@ -7,8 +7,8 @@
         <activity android:name="RSTest"
                   android:screenOrientation="portrait">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.qrdtools" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
     </application>
