CAF:QRD_QI:QRDTOOLS:None:none:move project
	Component Name: QRDTOOLS
	Feature Name: None
	Fixed CRs: none
	Targets: ALL
	Required VUs:
	Dependency Notes:
	Limitations:
	Suggested Testing:
	Peer Review:
	Reference Build or VU:
	Comments: sun meng

Change-Id: I2c1769915e6028d05a477f7154389524065291ef

--- a/tests/RenderScriptTests/ShadersTest/AndroidManifest.xml
+++ b/tests/RenderScriptTests/ShadersTest/AndroidManifest.xml
@@ -24,8 +24,8 @@
                   android:label="_ShadersTest"
                   android:theme="@android:style/Theme.Black.NoTitleBar">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.qrdtools" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
     </application>
