CAF:QRD_QI:QRDTOOLS:None:NONE:move project
	Component Name: QRDTOOLS
	Feature Name: None
	Fixed CRs: NONE
	Targets: ALL
	Required VUs:
	Dependency Notes:
	Limitations:
	Suggested Testing:
	Peer Review:
	Reference Build or VU:
	Comments: SUN MENG

Change-Id: Iaf02659acc5efb825565d97277d025d1ff22dabf

--- a/tests/RenderScriptTests/ComputePerf/AndroidManifest.xml
+++ b/tests/RenderScriptTests/ComputePerf/AndroidManifest.xml
@@ -22,8 +22,8 @@
     <application android:label="Compute Perf">
         <activity android:name="ComputePerf">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.qrdtools" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
     </application>
