CAF:QRD_QI:QRDTOOLS:None:none:move project
	Component Name: QRDTOOLS
	Feature Name: None
	Fixed CRs: none
	Targets: ALL
	Required VUs:
	Dependency Notes:
	Limitations:
	Suggested Testing:
	Peer Review:
	Reference Build or VU:
	Comments: sun meng

Change-Id: Ic58118c90331c69a2d4e0415af13651131a311fe

--- a/tests/RenderScriptTests/ImageProcessing/AndroidManifest.xml
+++ b/tests/RenderScriptTests/ImageProcessing/AndroidManifest.xml
@@ -9,8 +9,8 @@
         <uses-library android:name="android.test.runner" />
         <activity android:name="ImageProcessingActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.qrdtools" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
     </application>
