CAF:QRD_QI:QRDTOOLS:None:none:move project
	Component Name: QRDTOOLS
	Feature Name: None
	Fixed CRs: none
	Targets: ALL
	Required VUs:
	Dependency Notes:
	Limitations:
	Suggested Testing:
	Peer Review:
	Reference Build or VU:
	Comments: sunmeng

Change-Id: Ia97bd75f716f789085d576301a54a0f3c2448d56

--- a/tests/RenderScriptTests/PerfTest/AndroidManifest.xml
+++ b/tests/RenderScriptTests/PerfTest/AndroidManifest.xml
@@ -11,8 +11,8 @@
         <activity android:name="RsBench"
                   android:label="RsBenchmark">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.qrdtools" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
       </application>
