CAF:QRD_QI:QRDTOOLS:None:none:move project
	Component Name: QRDTOOLS
	Feature Name: None
	Fixed CRs: none
	Targets: ALL
	Required VUs:
	Dependency Notes:
	Limitations:
	Suggested Testing:
	Peer Review:
	Reference Build or VU:
	Comments: sun meng

Change-Id: I292d10dd86b959ba0d7e65ff964584f19b199e0b

--- a/tests/RenderScriptTests/ModelViewer/AndroidManifest.xml
+++ b/tests/RenderScriptTests/ModelViewer/AndroidManifest.xml
@@ -6,8 +6,8 @@
                   android:label="SimpleModel"
                   android:screenOrientation="nosensor">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.qrdtools" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
         <activity android:name="A3DSelector"
@@ -21,8 +21,8 @@
                   android:label="SceneGraph"
                   android:theme="@android:style/Theme.Black.NoTitleBar">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.qrdtools" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
     </application>
